--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                                         <span id="repoName">
                                         </span>
                                     </h2>
+                                       <div class="deployedMaterials"></div>
                                     <div id="repoDescription" style="display: block; margin-bottom: 5%">
                                     </div>
                                     <section id="downloads" class="clearfix">
@@ -136,7 +137,7 @@
     </div>
     <!-- #page -->
     <script type="text/javascript" src="http://www.ashwanik.in/Scripts/navigation.js"></script>
-       <script type="text/javascript" src="http://www.ashwanik.in/Scripts/github.js"></script>
-
+    <script type="text/javascript" src="http://www.ashwanik.in/Scripts/github.js"></script>
+    <script type="text/javascript" src="http://www.ashwanik.in/Scripts/deploymaterials.js"></script>
 </body>
 </html>
