--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <a href="#" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
 <a href="#" id="view-on-github" class="button" target="_blank"><span>View on GitHub</span></a>
 </section>
-
+ <div class="deployedMaterials_bottom"></div>
                                 </div>
                             </div>
                             <div style='clear: both;'></div>
