--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' type='text/javascript'></script>
     <link href='http://fonts.googleapis.com/css?family=Tinos|Roboto' media='all' rel='stylesheet' type='text/css' />
     <link href='//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' />
-   <link href="http://www.ashwanik.in/content/github.css" rel='stylesheet' type='text/css'>
+    <link href="http://www.ashwanik.in/content/github.css" rel='stylesheet' type='text/css'>
 </head>
 <body class='sidebar-closednbt'>
     <div id='pagenbt'>
@@ -79,22 +79,20 @@
                                 <a href="http://git.ashwanik.in" style="font-size: 25px">All Repositories</a>
                                 <div class="date-outer" style="margin-top: 15%">
                                     <h2 class='date-header' style="display: block; margin-bottom: 5%">
-                                        <span id="repoName">
-                                        </span>
+                                        <span id="repoName"></span>
                                     </h2>
-                                       <div class="deployedMaterials"></div>
+                                    <div class="deployedMaterials"></div>
                                     <div id="repoDescription" style="display: block; margin-bottom: 5%">
                                     </div>
                                     <section id="downloads" class="clearfix">
-<a href="#" id="download-zip" class="button"><span>Download .zip</span></a>
-<a href="#" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-<a href="#" id="view-on-github" class="button" target="_blank"><span>View on GitHub</span></a>
+                                        <a href="#" id="download-zip" class="button"><span>Download .zip</span></a>
+                                        <a href="#" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+                                        <a href="#" id="view-on-github" class="button" target="_blank"><span>View on GitHub</span></a>
 </section>
- <div style='clear: both;'></div>
- <div class="deployedMaterials_bottom"></div>
+                                    <div class="deployedMaterials_bottom clearfix"></div>
                                 </div>
                             </div>
-                           
+
                             <div class='clear'></div>
                         </div>
                     </div>
@@ -137,7 +135,7 @@
         <!-- #colophon -->
     </div>
     <!-- #page -->
-     <script type="text/javascript" src="http://www.ashwanik.in/Scripts/utils.js"></script>
+    <script type="text/javascript" src="http://www.ashwanik.in/Scripts/utils.js"></script>
     <script type="text/javascript" src="http://www.ashwanik.in/Scripts/navigation.js"></script>
     <script type="text/javascript" src="http://www.ashwanik.in/Scripts/github.js"></script>
     <script type="text/javascript" src="http://www.ashwanik.in/Scripts/deploymaterials.js"></script>
